<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">%1$s won\'t run unless you update the Android Wear app.</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">%1$s won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">%1$s won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="gamepad_how_to_play_text">Move %1$s in different directions with the arrows on the left. Discover the combined movements by pressing the buttons on the right.\nYou can also try the fun animations and change the mouth gestures.\n The more you play, the more it can do!</string>
    <string name="projects_dialog_failure_wrong_answer_penalty">You need to wait %1$s minutes before you try again.</string>
    <string name="projects_reprogram_description">The functions of %1$s will change on reprogramming, so it will perform different actions when you press the buttons!\nBut don\'t worry, when you quit the project, you\'ll be able to restore the original functions.</string>
    <string name="ranking_dialog_empty_list_description">Your score is too low to enter the ranking.\nWhy not have another go?</string>
    <string name="zowi_says_how_to_play_text">%1$s will make a sequence of movements. Watch and remember them carefully! Then you have to repeat them by pressing the button with the picture that corresponds to each movement.\n\nIf you repeat the sequence correctly, %1$s will add another move. The more you get it right, the more points you will win to enter the ranking.</string>
    <string name="achievement_description_angry">Zowi can be angry too.</string>
    <string name="achievement_description_anxious">You’re a total expert in putting Zowi in action!</string>
    <string name="achievement_description_ascending_turn">A very elegant movement.</string>
    <string name="achievement_description_confused">It seems that Zowi\'s a bit confused...</string>
    <string name="achievement_description_crusaito">With this move, Zowi can do a funny sidestep.</string>
    <string name="achievement_description_fart">What new thing is Zowi doing?</string>
    <string name="achievement_description_flapping">Zowi has learn a new way to move forward, the trot!</string>
    <string name="achievement_description_in_love">What awesome memory! Zowi loves it.</string>
    <string name="achievement_description_jitter">See how Zowi gets the nervous with the trembles.</string>
    <string name="achievement_description_magic">You now have the magic animation.</string>
    <string name="achievement_description_mouths_editor">With this editor, you can design your own mouth for Zowi.</string>
    <string name="achievement_description_shake_leg">Zowi shakes a foot in the air.</string>
    <string name="achievement_description_sleepy">Wow! Zowi can sleep standing up without falling over.</string>
    <string name="achievement_description_super_happy">Enter the world of Bitbloq!</string>
    <string name="achievement_description_swing">Another movement to add to the collection that will make Zowi a star performer!</string>
    <string name="achievement_description_tip_toe">Now you know Bitbloq! Celebrate with a new dance move in \"3, 2, 1... Action!\".</string>
    <string name="achievement_description_wave">Zowi also does the Mexican wave.</string>
    <string name="achievement_title_angry">Grrrgh</string>
    <string name="achievement_title_anxious">Fidgety</string>
    <string name="achievement_title_ascending_turn">Classic ballet!</string>
    <string name="achievement_title_confused">Confused!</string>
    <string name="achievement_title_crusaito">Criss-cross!</string>
    <string name="achievement_title_fart">Prrrr</string>
    <string name="achievement_title_flapping">Trot!</string>
    <string name="achievement_title_in_love">Zowi is love!</string>
    <string name="achievement_title_jitter">I\'m trembling!</string>
    <string name="achievement_title_magic">Magic!</string>
    <string name="achievement_title_mouths_editor">Mouth editor</string>
    <string name="gamepad_label">GamePad</string>
    <string name="games_box_title">Play</string>
    <string name="letter_to_parents_body">BQ is an educational technology company. Helping younger children to understand technology, encouraging them to use it and motivating them to develop it is the fuel that powers us. We want to teach them all that we\'ve learnt from designing complex electronic products such as mobile telephones, e-readers and tablets.\n\nTechnology rapidly transforms everything it touches. It occupies an increasingly important space in our day-to-day and it determines the way we interact with the people around us.\nWe can\'t accurately predict what the world will be like (or what we\'ll be like) in 20 years\' time, but we do know that science and technology will play leading roles in its change.\n\nIn this respect, it\'s essential our children become familiar with its fundamentals from early on.\n\nIt is in this context that we created Zowi. \nZowi is a 21st-century toy, designed with the intention of opening the doors of technology to children.\n\nThrough play, Zowi guides your children through the discovery of electronics (hardware), programming (software) and design. It teaches them that technology can be transparent, fun and accessible.\n\nIn addition to this, Zowi is an open toy: all its software and assembly plans are Open Source. As a result, your child can delve into the robot\'s functionality without hindrance. \nThe freer knowledge is, the faster we progress.\n\nWe hope that your experience with Zowi is as fun and exciting as it was for us giving it life.</string>
    <string name="letter_to_parents_quote">\"Education is the most powerful weapon which you can use to change the world\".\nNelson Mandela</string>
    <string name="letter_to_parents_signature">Kind regards\n\nAlberto Méndez\nBQ CEO</string>
    <string name="letter_to_parents_title">Letter to parents:</string>
    <string name="mouths_editor_label">Mouth editor</string>
    <string name="mouths_label">Draw the mouth</string>
    <string name="project_adivinawi_title">Guess with Zowi</string>
    <string name="project_bio1_title">Zowi\'s eyes</string>
    <string name="project_bio3_title">Zowi\'s legs</string>
    <string name="project_bitbloq2_title">Bitbloq II: Sensors</string>
    <string name="project_choreography_title">Robot choreography</string>
    <string name="project_form_title">A robot’s form</string>
    <string name="project_gravity_title">Gravity</string>
    <string name="project_helloworld_title">Bitbloq I: Hello World</string>
    <string name="project_move_title">Move objects</string>
    <string name="project_reprogram_title">Zowi, the alarm robot</string>
    <string name="projects_box_title">Discover</string>
    <string name="timeline_label">3, 2, 1... Action!</string>
    <string name="welcome_letter_to_parents_button_text">Letter to parents</string>
    <string name="welcome_start_button_text">Start</string>
    <string name="wizard_connecting_set_name_description_text">Type it in here:</string>
    <string name="wizard_connecting_set_name_title_text">Give it a name!</string>
    <string name="wizard_set_name_button_text">I like this name.</string>
    <string name="zowi_default_name">Zowi</string>
    <string name="zowi_says_label">Repeat with Zowi</string>
    <string name="button_scan">Scan for devices</string>
    <string name="none_found">No devices found</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="select_device">Select a device</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="title_paired_devices">Paired Devices</string>
</resources>