<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="@dimen/droidtwoino_dialog_width"
    android:layout_height="match_parent">
    <TextView
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="#0099cc"
        android:id="@+id/dialog_title"
        android:paddingLeft="10dp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_device"/>
    <TextView
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:id="@+id/title_paired_devices"
        android:background="#0099cc"
        android:paddingLeft="10dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_paired_devices"/>
    <ListView
        android:id="@+id/paired_devices"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:textSize="18sp"
        android:id="@+id/paired_devices_empty_item"
        android:padding="10dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:text="@string/none_paired"/>
    <TextView
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:id="@+id/title_new_devices"
        android:background="#0099cc"
        android:paddingLeft="10dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_other_devices"/>
    <ListView
        android:id="@+id/new_devices"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:textSize="18sp"
        android:id="@+id/new_devices_empty_item"
        android:padding="10dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/none_found"/>
    <Button
        android:id="@+id/button_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_scan"
        android:layout_weight="0"/>
</LinearLayout>
