<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="@dimen/welcome_animation_size"
            android:layout_height="@dimen/welcome_animation_size"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:src="@drawable/hello_image"
            android:adjustViewBounds="true"/>
        <com.bq.zowi.components.makerboxdialogs.MakerBoxButton
            android:enabled="true"
            android:textSize="@dimen/maker_box_dialog_button_text_size"
            android:textColor="@color/white"
            android:id="@+id/welcome_start_wizard_button"
            android:background="@drawable/maker_box_action_button_selector"
            android:paddingBottom="@dimen/makerbox_inner_shadow_offset"
            android:layout_width="@dimen/makerbox_button_width"
            android:layout_height="@dimen/makerbox_button_height"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:text="@string/welcome_start_button_text"
            android:textAllCaps="true"/>
        <TextView
            android:textSize="@dimen/maker_box_dialog_button_text_size"
            android:textColor="@color/white"
            android:id="@+id/welcome_letter_to_parents_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_letter_to_parents_button_text"
            android:textAllCaps="true"/>
    </LinearLayout>
    <com.bq.zowi.components.makerboxdialogs.MakerBoxDialogScrollable
        android:id="@+id/welcome_letter_to_parents_dialog"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textSize="@dimen/makerbox_title"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/vertical_margin"
                android:text="@string/letter_to_parents_title"/>
            <TextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/vertical_margin"
                android:text="@string/letter_to_parents_quote"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/vertical_margin"
                android:text="@string/letter_to_parents_body"/>
            <TextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/letter_to_parents_signature"/>
        </LinearLayout>
    </com.bq.zowi.components.makerboxdialogs.MakerBoxDialogScrollable>
</RelativeLayout>
