<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_home_projects_layout"
    android:paddingLeft="@dimen/sections_pager_horizontal_margin"
    android:paddingRight="@dimen/sections_pager_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:paddingTop="@dimen/sections_pager_vertical_margin_top"
            android:paddingBottom="@dimen/sections_pager_vertical_margin_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:background="@drawable/maker_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sections_pager_box_margin"
                android:layout_marginRight="@dimen/sections_pager_box_margin"
                android:minHeight="@dimen/sections_pager_box_min_height">
                <TextView
                    android:textSize="@dimen/sections_pager_box_title_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sections_pager_box_title_margin"
                    android:layout_marginBottom="@dimen/sections_pager_box_title_margin"
                    android:text="@string/projects_box_title"
                    android:layout_centerHorizontal="true"/>
                <androidx.gridlayout.widget.GridLayout
                    android:paddingLeft="@dimen/home_maker_box_horizontal_padding"
                    android:paddingTop="@dimen/home_maker_box_vertical_padding"
                    android:paddingRight="@dimen/home_maker_box_horizontal_padding"
                    android:paddingBottom="@dimen/home_maker_box_vertical_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:columnCount="@integer/home_pager_makerbox_columns">
                    <com.bq.zowi.components.home.ZowiAppView
                        android:id="@+id/zowiapps_load_project_mueve_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_columnWeight="1"
                        app:layout_gravity="fill"
                        app:buttonBackground="@drawable/project_mueve_button_selector"
                        app:label="@string/project_move_title"/>
                    <com.bq.zowi.components.home.ZowiAppView
                        android:id="@+id/zowiapps_load_project_choreography_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_columnWeight="1"
                        app:layout_gravity="fill"
                        app:buttonBackground="@drawable/project_choreography_button_selector"
                        app:label="@string/project_choreography_title"/>
                    <com.bq.zowi.components.home.ZowiAppView
                        android:id="@+id/zowiapps_load_project_form_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_columnWeight="1"
                        app:layout_gravity="fill"
                        app:buttonBackground="@drawable/project_forma_button_selector"
                        app:label="@string/project_form_title"/>
                    <com.bq.zowi.components.home.ZowiAppView
                        android:id="@+id/zowiapps_load_project_bio1_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_columnWeight="1"
                        app:layout_gravity="fill"
                        app:buttonBackground="@drawable/project_bio1_button_selector"
                        app:label="@string/project_bio1_title"/>
                    <com.bq.zowi.components.home.ZowiAppView
                        android:id="@+id/zowiapps_load_project_bio3_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_columnWeight="1"
                        app:layout_gravity="fill"
                        app:buttonBackground="@drawable/project_bio3_button_selector"
                        app:label="@string/project_bio3_title"/>
                    <com.bq.zowi.components.home.ZowiAppView
                        android:id="@+id/zowiapps_load_project_reprogram_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_columnWeight="1"
                        app:layout_gravity="fill"
                        app:buttonBackground="@drawable/project_reprogram_button_selector"
                        app:label="@string/project_reprogram_title"/>
                    <com.bq.zowi.components.home.ZowiAppView
                        android:id="@+id/zowiapps_load_project_helloworld_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_columnWeight="1"
                        app:layout_gravity="fill"
                        app:buttonBackground="@drawable/project_helloworld_button_selector"
                        app:label="@string/project_helloworld_title"/>
                    <com.bq.zowi.components.home.ZowiAppView
                        android:id="@+id/zowiapps_load_project_bitbloq2_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_columnWeight="1"
                        app:layout_gravity="fill"
                        app:buttonBackground="@drawable/project_bitbloq2_button_selector"
                        app:label="@string/project_bitbloq2_title"/>
                    <com.bq.zowi.components.home.ZowiAppView
                        android:id="@+id/zowiapps_load_project_adivinawi_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_columnWeight="1"
                        app:layout_gravity="fill"
                        app:buttonBackground="@drawable/project_adivinawi_button_selector"
                        app:label="@string/project_adivinawi_title"/>
                    <com.bq.zowi.components.home.ZowiAppView
                        android:id="@+id/zowiapps_load_project_gravity_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_columnWeight="1"
                        app:layout_gravity="fill"
                        app:buttonBackground="@drawable/project_gravity_button_selector"
                        app:label="@string/project_gravity_title"/>
                </androidx.gridlayout.widget.GridLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
