<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_home_games_layout"
    android:paddingLeft="@dimen/sections_pager_horizontal_margin"
    android:paddingRight="@dimen/sections_pager_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:paddingTop="@dimen/sections_pager_vertical_margin_top"
            android:paddingBottom="@dimen/sections_pager_vertical_margin_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:background="@drawable/maker_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sections_pager_box_margin"
                android:layout_marginRight="@dimen/sections_pager_box_margin"
                android:minHeight="@dimen/sections_pager_box_min_height">
                <TextView
                    android:textSize="@dimen/sections_pager_box_title_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sections_pager_box_title_margin"
                    android:layout_marginBottom="@dimen/sections_pager_box_title_margin"
                    android:text="@string/games_box_title"
                    android:layout_centerHorizontal="true"/>
                <android.support.v7.widget.GridLayout
                    android:paddingLeft="@dimen/home_maker_box_horizontal_padding"
                    android:paddingTop="@dimen/home_maker_box_vertical_padding"
                    android:paddingRight="@dimen/home_maker_box_horizontal_padding"
                    android:paddingBottom="@dimen/home_maker_box_vertical_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:columnCount="@integer/home_pager_makerbox_columns">
                    <com.bq.zowi.components.home.ZowiAppView
                        android:id="@+id/zowiapps_load_gamepad_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_columnWeight="1"
                        app:layout_gravity="fill"
                        app:buttonBackground="@drawable/pad_button_selector"
                        app:label="@string/gamepad_label"/>
                    <com.bq.zowi.components.home.ZowiAppView
                        android:id="@+id/zowiapps_load_timeline_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_columnWeight="1"
                        app:layout_gravity="fill"
                        app:buttonBackground="@drawable/timeline_button_selector"
                        app:label="@string/timeline_label"/>
                    <com.bq.zowi.components.home.ZowiAppView
                        android:id="@+id/zowiapps_load_zowi_says_minigame_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_columnWeight="1"
                        app:layout_gravity="fill"
                        app:buttonBackground="@drawable/simon_game_button_selector"
                        app:label="@string/zowi_says_label"/>
                    <com.bq.zowi.components.home.ZowiAppView
                        android:id="@+id/zowiapps_load_mouths_minigame_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_columnWeight="1"
                        app:layout_gravity="fill"
                        app:buttonBackground="@drawable/mouths_game_button_selector"
                        app:label="@string/mouths_label"/>
                    <com.bq.zowi.components.home.ZowiAppView
                        android:id="@+id/zowiapps_load_mouths_editor_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_columnWeight="1"
                        app:layout_gravity="fill"
                        app:buttonBackground="@drawable/blocked_option_button"
                        app:label="@string/mouths_editor_label"/>
                </android.support.v7.widget.GridLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
