<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/connected_wizard_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/wizard_makerbox_margin_horizontal"
        android:paddingTop="@dimen/wizard_makerbox_margin_vertical"
        android:paddingRight="@dimen/wizard_makerbox_margin_horizontal"
        android:paddingBottom="@dimen/wizard_makerbox_margin_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.bq.zowi.components.makerboxdialogs.MakerBox
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/makerbox_shadow_offset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/wizard_margin_bottom">
            <TextView
                android:textSize="@dimen/wizard_title_size"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/wizard_makerbox_title_margin_vertical_top"
                android:layout_marginBottom="@dimen/wizard_makerbox_title_margin_vertical_bottom"
                android:text="@string/wizard_connecting_set_name_title_text"/>
            <TextView
                android:textSize="@dimen/wizard_text_size"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/wizard_margin_bottom"
                android:text="@string/wizard_connecting_set_name_description_text"/>
            <EditText
                android:id="@+id/wizard_name_edit_text"
                android:layout_width="@dimen/makerbox_button_width"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/wizard_margin_bottom"
                android:hint="@string/zowi_default_name"
                android:maxLength="@integer/name_max_length"
                android:inputType="textCapWords"/>
            <com.bq.zowi.components.makerboxdialogs.MakerBoxButton
                android:enabled="true"
                android:textSize="@dimen/maker_box_dialog_button_text_size"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:id="@+id/wizard_set_name_button"
                android:background="@drawable/maker_box_action_button_selector"
                android:paddingBottom="@dimen/makerbox_inner_shadow_offset"
                android:layout_width="@dimen/makerbox_button_width"
                android:layout_height="@dimen/makerbox_button_height"
                android:layout_marginBottom="@dimen/wizard_margin_bottom"
                android:text="@string/wizard_set_name_button_text"
                android:layout_centerHorizontal="true"/>
        </com.bq.zowi.components.makerboxdialogs.MakerBox>
    </LinearLayout>
</RelativeLayout>
